syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

package kurrentdb.protobuf;
option csharp_namespace = "KurrentDB.Protobuf";

message DynamicValue {
  oneof kind {
    // Represents a null value.
    google.protobuf.NullValue null_value = 1;

    // Represents a 32-bit signed integer value.
    sint32 int32_value = 2;

    // Represents a 64-bit signed integer value.
    sint64 int64_value = 3;

    // Represents a byte array value.
    bytes bytes_value = 4;

    // Represents a 64-bit double-precision floating-point value.
    double double_value = 5;

    // Represents a 32-bit single-precision floating-point value
    float float_value = 6;

    // Represents a string value.
    string string_value = 7;

    // Represents a boolean value.
    bool boolean_value = 8;

    // Represents a timestamp value.
    google.protobuf.Timestamp timestamp_value = 9;

    // Represents a duration value.
    google.protobuf.Duration duration_value = 10;
  }
}